frontend/test/should_pass/redirect_004.grg
rule r {
	x:Node -e:Edge-> y:Node;

	modify {
		z:Node;
		z !-e->! z;
	}
}

