frontend/test/should_fail/basic_004.grg
rule r {
  -e:Edge->;
  modify {
    . -e:Edge-> .;
  }
}
